--- a/app/common/styles/base.css
+++ b/app/common/styles/base.css
@@ -1,23 +1,22 @@
-@import url('https://fonts.googleapis.com/css2?family=Alata&family=Lexend:wght@100;200;300;400;500;600&family=Nunito:ital,wght@0,200;0,500;0,600;1,200;1,300;1,400&family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,400;1,500&family=Roboto:ital,wght@0,100;0,300;0,400;1,300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Alata&family=Lexend:wght@100;200;300;400;500;600&family=Manrope:wght@200;300;400;500;600;700;800&family=Nunito:ital,wght@0,200;0,500;0,600;1,200;1,300;1,400&family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,400;1,500&family=Roboto:ital,wght@0,100;0,300;0,400;1,300&display=swap');
 @import url('./variables.css');
 
 * {
     box-sizing: border-box;
+    transition: all 0.2s ease-in-out;
 }
 
 body {
-    font-family: 'Alata', sans-serif;
+    font-family: 'Manrope', sans-serif;
 }
 
-
-.button-primary {
+button {
     border-radius: 4px;
     background: var(--purple-primary);
     color: var(--white);
     border: 0;
     outline: 0;
-    width: 100px;
-    height: 35px;
+    font-family: 'Manrope', sans-serif;
 }
 
 .button:hover {
