--- a/app/common/styles/grid.css
+++ b/app/common/styles/grid.css
@@ -1,11 +1,10 @@
 .grid {
-    width: 100%;
     display: block;
     padding: 0;
 }
 
 .grid.wide {
-    max-width: 1200px;
+    max-width: 80%;
     margin: 0 auto;
 }
 
@@ -430,14 +429,14 @@
 /* Tablet - PC low resolution */
 @media (min-width: 740px) and (max-width: 1023px) {
     .wide {
-        width: 644px;
+        width: 90%;
     }
 }
 
 /* > PC low resolution */
 @media (min-width: 1024px) and (max-width: 1239px) {
     .wide {
-        width: 984px;
+        width: 90%;
     }
 
     .wide .row {
