--- a/app/common/footer/footer.css
+++ b/app/common/footer/footer.css
@@ -12,7 +12,6 @@
 .footer-info {
     display: flex;
     flex-wrap: wrap;
-    gap: 20px;
     justify-content: space-between;
     padding-bottom: 20px;
 }
@@ -22,7 +21,6 @@
 }
 
 .info-relates {
-    width: 60%;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -86,7 +84,7 @@
     position: absolute;
     width: 100%;
     height: 1px;
-    background-color:#ccc;
+    background-color: #ccc;
     top: -30px;
 }
 
@@ -95,4 +93,46 @@
     flex-wrap: wrap;
     align-items: center;
     gap: 20px;
+}
+
+
+@media (min-width: 1113px) {}
+
+@media (min-width: 740px) and (max-width: 1111px) {}
+
+@media (max-width: 1024px) {
+
+    .wide {
+        max-width: 100% !important;
+        width: 90%;
+        margin: 0 auto;
+    }
+}
+
+@media (min-width: 1024px) and (max-width: 1239px) {
+
+    .wide {
+        max-width: 100% !important;
+        width: 90%;
+        margin: 0 auto;
+    }
+}
+
+@media (max-width: 880px) {
+    .info-foodeats {
+        width: 500px;
+    }
+
+    .relates-list {
+        padding: 0;
+        margin-right: 20px;
+    }
+}
+
+@media (max-width: 540px) {
+    .wide {
+        max-width: 100% !important;
+        width: 90%;
+        margin: 0 auto;
+    }
 }
