--- a/app/pages/auth/login/login.css
+++ b/app/pages/auth/login/login.css
@@ -1,3 +1,8 @@
+@import url("../../../common/styles/reset.css");
+@import url("../../../common/styles/grid.css");
+@import url("../../../common/styles/base.css");
+
+
 body {
     margin: 0;
     display: flex;
