--- a/app/pages/blogs/blogs.css
+++ b/app/pages/blogs/blogs.css
@@ -1,132 +1,168 @@
-* {
-    box-sizing: border-box;
+@import url("../../common/styles/reset.css");
+@import url("../../common/styles/grid.css");
+@import url("../../common/styles/base.css");
+@import url("../../common/styles/variables.css");
+
+.container {
+    margin-top: 108px;
+    padding: 100px 0;
 }
 
-body {
-    width: 100%;
-    height: 100vh;
-    margin: 0;
-    padding: 0;
-    font-size: 14px;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-.nav {
-  width: 100%;
-    min-height: 42px;
-    background-color: #ec8a6c;
+.blog {
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 20px;
 }
 
-.nav-list {
-    margin: auto 16px;
-    padding-left: 0;
+.blog-content {
+    width: 45%;
+}
 
+.blog-content p {
+    color: #575363;
+    font-size: 16px;
+    font-style: normal;
+    line-height: 30px;
+}
+
+.blog-content h1 {
+    color: #191720;
+    font-size: 30px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: 44px;
+}
+
+.blog-content .avatar {
     display: flex;
+    align-items: center;
+    gap: 20px;
 }
 
-.content {
-    margin: 0 auto;
-    width: 100%;
-    height: 100vh;
+.blog-content .avatar p {
+    margin: 0;
+}
+
+.blog-ill img {
+    width: 470px;
+    border-radius: 12px;
+}
+
+.search {
     display: flex;
-    align-items: stretch;
-
+    align-items: center;
+    justify-content: space-between;
+    padding: 80px 0;
+    gap: 20px;
+    flex-wrap: wrap;
 }
 
-.column-item {
-    padding: 0 16px;
-    flex: 1;
+.search-buttons button {
+    padding: 0 15px;
+    height: 40px;
+    background-color: transparent;
+    color: #191720;
 }
 
-.word {
-    flex: 1;
+.search-bar {
+    display: flex;
+    align-items: center;
+    gap: 12px;
 }
 
-.image {
-    flex: 1;
+.search-input input {
+    width: 300px;
+    height: 40px;
+    flex-shrink: 0;
+    border-radius: 5px;
+    border: 1px solid #cccc;
+    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.11);
+    outline: none;
+    padding-left: 30px;
+    font-size: 16px;
 }
 
-.img1 {
-    width: 440px;
-    height: 440px;
+.search-input {
+    position: relative;
 }
 
-.img2 {
-    width: 330px;
-    height: 330px;
-    height: auto;
-    margin-bottom: 10px;
+.search-input i {
+    position: absolute;
+    left: 8px;
+    top: 14px;
+    color: #cccc;
+    font-size: 14px;
 }
 
-.img-chef {
-    width: 40px;
+.search-bar button {
+    padding: 0 15px;
     height: 40px;
 }
 
-.font-p {
-    font-size: 40px;
-}
-
-.grid-container {
-    margin: 0 auto;
-    justify-content: space-between;
+.blogs {
     width: 100%;
-    height: 100vh;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    /* 3 cột bằng nhau */
-    grid-template-rows: repeat(4, 1fr);
-    /* 4 hàng bằng nhau */
-    gap: 10px;
-    /* Khoảng cách giữa các ô */
-    grid-gap: 20px;
 }
 
-.grid-item {
-   
-    padding: 15px;
-    display: flex;
-    flex-direction: column;
+.card-blog {
+    padding: 10px;
 }
 
-.text-content {
-    flex: 1;
-    justify-content: space-around;
-}
-
-.author-content {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-}
-
-h1 {
-    font-size: 44px;
-    width: 550px;
-    height: 130px;
-}
-
-.content__word {
-    font-size: 18px;
-    font-family: Arial;
-    width: 430px;
-    height: auto;
-}.content__word1 {
-    font-size: 18px;
-    font-family: Arial;
-    width: 330px;
-    height: auto;
-}
-
-.content__header {
-    height: 60px;
+.card-blog h5 {
+    color: #191720;
     font-size: 20px;
-    font-family: Arial;
-    width: 330px
+    font-style: normal;
+    font-weight: 800;
+    line-height: 30px;
 }
-.canchinh{
-    display: flex;
-    
+
+.card-blog p {
+    color: var(--grey, #575363);
+    font-size: 15px;
+    font-style: normal;
+}
+
+.card-blog-footer img {
+    border-radius: 50%;
+    width: 54px;
+    height: 54px;
+    flex-shrink: 0;
+    margin-right: 10px;
+}
+
+.card-blog-footer span {
+    font-weight: 800;
+    color: #191720
+}
+
+.col:hover h5 {
+    color: var(--purple-primary);
+}
+
+@media (max-width: 1000px) {
+
+    .blog {
+        justify-content: space-around;
+    }
+
+
+    .blog-content {
+        width: 100%;
+    }
+
+    .blog-ill img {
+        width: 100%;
+        border-radius: 12px;
+    }
+}
+
+@media (max-width: 448px) {
+    .search-bar {
+        width: 100%;
+    }
+
+    .search-input input {
+        width: 100%;
+    }
 }
