--- a/app/pages/restaurants/restaurants.css
+++ b/app/pages/restaurants/restaurants.css
@@ -19,6 +19,10 @@
     margin-bottom: 38px;
 }
 
+p {
+    margin-bottom: 0;
+}
+
 button {
     font-size: 16px;
     transition: all .5s;
@@ -27,6 +31,10 @@ button {
 
 button:hover {
     opacity: 0.9;
+}
+
+a:hover {
+    color: unset;
 }
 
 .active {
@@ -65,6 +73,7 @@ button:hover {
 
 .right {
     width: 870px;
+    position: relative;
 }
 
 .search-result__filter {
@@ -100,7 +109,8 @@ button:hover {
 }
 
 .filters {
-    font-weight: 400;
+    color: var(--dark);
+    font-weight: 600;
 }
 
 .clear-all {
@@ -268,8 +278,8 @@ button:hover {
 
 .arow-right {
     position: absolute;
-    right: 88px;
-    top: 85px;
+    right: -24px;
+    top: 64px;
     cursor: pointer;
     transition: all .3s;
 }
@@ -313,6 +323,7 @@ button:hover {
     border-radius: 6px;
     margin-left: 12px;
     cursor: pointer;
+    position: relative;
 }
 
 .sort-by {
@@ -337,19 +348,11 @@ button:hover {
     border-radius: 6px 6px 0 0;
 }
 
-.wrapper-modal {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-}
-
-.modal {
+.modal_js {
     border: 1px solid var(--dark);
     position: absolute;
-    top: 311px;
-    right: 106px;
+    top: 58px;
+    right: -1px;
     width: 169px;
     border-radius:0 0 6px 6px;
     transition: all 0.5s ease-in;
@@ -371,6 +374,7 @@ button:hover {
 
 .card {
     display: block;
+    width: 100%;
     margin-bottom: 30px;
     margin-right: 30px;
     background-color: var(--white-color);
@@ -384,6 +388,7 @@ button:hover {
     padding: 12px;
     background-color: var(--white);
     color: var(--dark);
+    transition: all .5s;
 }
 
 .product-img {
@@ -449,10 +454,16 @@ button:hover {
     margin-top: 30px;
 }
 
+.pagination {
+    display: block;
+    margin-left: 6px;
+}
+
 .list-btn-navigation .pagination-item {
     width: 44px;
     height: 44px;
     background-color: var(--white);
+    color: var(--dark);
     border: 1px solid #ccc;
     border-radius: 4px;
     margin-right: 10px;
