--- a/app/common/header/header.css
+++ b/app/common/header/header.css
@@ -37,6 +37,11 @@
     margin: 0;
 }
 
+.nav-menu ul a {
+    color:#333;
+    font-weight: 800;
+}
+
 .nav-menu li {
     display: inline-block;
     min-width: 120px;
