--- a/app/pages/restaurants/restaurants.css
+++ b/app/pages/restaurants/restaurants.css
@@ -3,8 +3,18 @@
 @import url('../../common/styles/base.css');
 @import url('../../common/styles/grid.css');
 
+p {
+    margin: 0 !important;
+    font-weight: 600 !important;
+}
+
+.container-restaurant {
+    margin-top: 108px;
+}
+
 .mt-30 {
     margin-top: 30px;
+    margin-bottom: 30px;
 }
 
 .mt-45 {
@@ -63,7 +73,8 @@ a:hover {
 
 .wrapper {
     display: flex;
-    margin: 32px 73px 87px 73px;
+    justify-content: space-between;
+    padding: 60px 0;
 }
 
 .left {
@@ -72,7 +83,7 @@ a:hover {
 }
 
 .right {
-    width: 870px;
+    width: 75%;
     position: relative;
 }
 
@@ -82,8 +93,8 @@ a:hover {
 }
 
 .food-category {
-    width: 100%;
-    height: 158px;
+    display: flex;
+    align-items: center;
     position: relative;
 }
 
@@ -138,6 +149,10 @@ a:hover {
     display: flex;
     overflow: hidden;
     height: 60px;
+}
+
+.control button {
+    font-weight: 800;
 }
 
 .delivery,
@@ -209,7 +224,7 @@ a:hover {
 }
 
 .chkItem p {
-    margin: 0 5px;
+    margin: 0 5px !important;
     color: var(--grey);
 }
 
@@ -225,15 +240,14 @@ a:hover {
     margin-left: 5px;
 }
 
-/* Css content right */
-
-.food-category__title {
+Css content right */ .food-category__title {
     display: flex;
     justify-content: space-between;
 }
 
 .food-category__title p {
     font-size: 20px;
+    font-weight: 800;
 }
 
 .food-category__title p:last-child {
@@ -270,30 +284,26 @@ a:hover {
     font-size: 16px;
     line-height: 28px;
     margin-bottom: 30px;
+    font-weight: 600;
 }
 
 .p-active {
     color: var(--purple-primary);
 }
 
-.arow-right {
-    position: absolute;
-    right: -24px;
-    top: 64px;
-    cursor: pointer;
-    transition: all .3s;
-}
+.arow-right {}
 
 .arow-right:hover {
     transform: scale(1.2);
 }
 
 /* CSS container */
-
 .container {
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 80px;
+    line-height: 80px;
 }
 
 .container__header {
@@ -302,7 +312,8 @@ a:hover {
     align-items: center;
 }
 
-.address, .container__sort {
+.address,
+.container__sort {
     flex: 1;
 }
 
@@ -354,7 +365,7 @@ a:hover {
     top: 58px;
     right: -1px;
     width: 169px;
-    border-radius:0 0 6px 6px;
+    border-radius: 0 0 6px 6px;
     transition: all 0.5s ease-in;
     z-index: 100;
     background-color: var(--white);
@@ -370,8 +381,7 @@ a:hover {
     color: var(--white);
 }
 
-/* CSS product item */
-
+/* CSS product item  */
 .card {
     display: block;
     width: 100%;
@@ -454,7 +464,7 @@ a:hover {
     margin-top: 30px;
 }
 
-.pagination {
+.pagination-food {
     display: block;
     margin-left: 6px;
 }
@@ -472,4 +482,14 @@ a:hover {
 .list-btn-navigation .btn--active {
     background-color: var(--purple-primary);
     color: var(--white);
+}
+
+
+
+@media (max-width: 500px) {
+    .mb-12 {
+        width: 100% !important;
+        flex: 1 !important;
+        max-width: 100% !important;
+    }
 }
