--- a/app/common/header/header.css
+++ b/app/common/header/header.css
@@ -38,13 +38,13 @@
 }
 
 .nav-menu ul a {
-    color:#333;
+    color: #333;
     font-weight: 800;
 }
 
 .nav-menu li {
     display: inline-block;
-    min-width: 120px;
+    min-width: 110px;
     text-align: center;
     font-size: 16px;
     border-radius: 10px;
@@ -111,6 +111,7 @@
     display: flex;
     flex-direction: column;
     right: 0;
+    border-radius: 8px;
 }
 
 .list_menu a {
@@ -118,9 +119,13 @@
     height: 45px;
     line-height: 45px;
     width: 400px;
-    background-color: #e0e0e021;
+    background-color: rgba(244, 209, 135, 0.49);
     padding-left: 20px;
-    border-radius: 10px;
+    font-weight: 600;
+}
+
+.list_menu a:hover {
+    background-color: rgba(190, 190, 190, 0.8);
 }
 
 .active_menu {
@@ -138,6 +143,10 @@
 .button-primary {
     background-color: var(--dark);
     margin-left: 20px;
+}
+
+.button-primary:hover {
+    background-color: var(--purple-primary);
 }
 
 p {
@@ -158,24 +167,18 @@ p {
 }
 
 .header__cart-list {
-    width: 400px;
+    padding: 30px;
+    padding-bottom: 0;
     background-color: #fff;
     position: absolute;
-    top: 50px;
-    right: -400px;
     box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.2);
-    display: none;
-    cursor: default;
-    border-radius: 2px;
-    z-index: 100;
-    padding-left: 30px;
-    position: fixed;
-    top: 108px;
-    right: 281px;
+    border-radius: 5px;
+    opacity: 0;
+    right: 0;
 }
 
 .appear {
-    display: block;
+    opacity: 1;
 }
 
 .btn__close {
@@ -185,7 +188,8 @@ p {
     cursor: pointer;
 }
 
-.btn__close, .header__cart-heading {
+.btn__close,
+.header__cart-heading {
     margin-bottom: 30px;
 }
 
@@ -227,9 +231,10 @@ p {
     text-align: center;
 }
 
-.header__cart-item-quantity-decrease, .header__cart-item-quantity-increase {
-    padding: 5px 0;
-    cursor: pointer;
+.header__cart-item-quantity span {
+    display: block;
+    height: 30px;
+    line-height: 30px;
 }
 
 .header__cart-item-info {
@@ -296,12 +301,17 @@ p {
 .header__cart-view-cart-total {
     display: inline-block;
     color: var(--white);
+    margin: 0;
 }
 
 @media (min-width: 1113px) {
 
     .item_list {
         display: inline-block;
+    }
+
+    .list_menu {
+        display: none !important;
     }
 }
 
