--- a/app/pages/auth/register/register.css
+++ b/app/pages/auth/register/register.css
@@ -1,7 +1,8 @@
-@import url("../../common/styles/reset.css");
-@import url("../../common/styles/grid.css");
-@import url("../../common/styles/base.css");
-@import url("../../common/styles/variables.css");
+@import url("../../../common/styles/reset.css");
+@import url("../../../common/styles/grid.css");
+@import url("../../../common/styles/base.css");
+@import url("../../../common/styles/variables.css");
+
 body {
     margin: 0;
     display: flex;
@@ -14,6 +15,7 @@ body {
 img {
     width: 30px;
     height: 30px;
+
 }
 
 .signup-container h2 {
@@ -22,10 +24,11 @@ img {
 
 .social-login button {
 
+
     display: flex;
     align-items: center;
     width: 100%;
-    
+    font-weight: 600;
     padding: 10px;
     margin-bottom: 10px;
     background-color: rgba(255, 255, 255, 0.918);
@@ -34,6 +37,7 @@ img {
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s ease;
+
 }
 
 .social-login button:hover {
@@ -43,43 +47,31 @@ img {
 
 .or-divider {
     margin: 10px;
-    display: block;
-    width: 100%;
-    height: auto;
-    padding: 10px;
-    margin-bottom: 10px;
-    background-color: #fff;
-    color: black;
-    border: 1px solid #ccc;
-    border-radius: 5px;  
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-}
-.or-divider {
-    margin: 10px 0;
     font-weight: bold;
 }
 
 .email-signup {
     height: 42vh;
     width: 100%;
-
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    text-align: left;
     margin-top: 10px;
 }
 
 .email-signup label {
     height: 10vh;
-}
-
-.email-signup label {
     display: inline-block;
     width: 100px;
     text-align: right;
     margin-right: 15px;
 }
 
+
+
 .email-signup input {
-    width: 95%;
+    width: 93, 5%;
     padding: 10px;
     margin-bottom: 10px;
     border: 1px solid #ccc;
@@ -87,28 +79,23 @@ img {
 }
 
 button[type="submit"] {
+
     background-color: rgba(87, 42, 248, 1);
     color: #fff;
-    font-size: 22px;
+    font-size: 18px;
     border: #007bff;
-    height: 15vh;
+    height: 45px;
+    border-radius: 10px;
+    font-weight: 500;
 }
 
 button[type="submit"]:hover {
     background-color: rgba(88, 42, 248, 1);
-    background-color: #28a745;
-    color: #fff;
-    font-size: 22px;
-}
-
-button[type="submit"]:hover {
-    background-color: #1a682c;
 }
 
 .have-account {
     margin-top: 20px;
     font-size: 16px;
-    font-size: 14px;
     text-align: center;
 }
 
@@ -116,6 +103,7 @@ button[type="submit"]:hover {
     color: #007bff;
     text-decoration: none;
 }
+
 
 .signup-container {
     border: 1px solid #ccc;
@@ -129,22 +117,13 @@ button[type="submit"]:hover {
 
     font-size: 16px;
 }
+
 .social-icon {
     width: 20px;
     height: 20px;
     margin-right: 60px;
 }
-.content{
+
+.content {
     margin-bottom: 30px;
-}
-.signup-container {
-    border: 1px solid #ccc;
-    padding: 15px;
-    background-color: #fff;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-    text-align: center;
-    width: 350px; 
-    height: auto;
-    margin: 0 auto;
-    font-size: 16px;
 }
